Most functions work but: - Vanilla arrow nbt keep resetting to null - Vanilla arrow won't deduct by 1 when shot without infinity